src/apps/k8s/apigateway.yaml
# apigateway.yaml
apiVersion: apps/v1
kind: Deployment
# apigateway-deployment.yaml
metadata:
  namespace: gnx-apps-ns
  name: apigateway
spec:
  replicas: 1 # Number of pods to run
  selector:
    matchLabels:
      app: apigateway # Select pods with this label
  template:
    metadata:
      labels:
        app: apigateway # Label for the pods
    spec:
      containers:
        - name: apigateway-container
          image: genocs/apigateway:1.0.3 # Replace with your image
          ports:
            - containerPort: 8080 # Port the container exposes
          resources: # Optional resource requests and limits
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 200m
              memory: 400Mi

---
# apigateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: gnx-apps-ns
  name: apigateway-svc
spec:
  selector:
    app: apigateway # Select pods with this label
  ports:
    - protocol: TCP
      port: 80 # Port the service exposes
      targetPort: 8080 # Port the container exposes
  type: ClusterIP # Expose the service internally
