src/apps/k8s/orders.yaml
# orders.yaml
apiVersion: apps/v1
kind: Deployment
# orders-deployment.yaml
metadata:
  namespace: gnx-apps-ns
  name: orders
spec:
  replicas: 1 # Number of pods to run
  selector:
    matchLabels:
      app: orders # Select pods with this label
  template:
    metadata:
      labels:
        app: orders # Label for the pods
    spec:
      containers:
      - name: orders-container
        image: genocs/orders-webapi:1.0.3 # Replace with your image
        ports:
        - containerPort: 8080 # Port the container exposes
        resources: # Optional resource requests and limits
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            cpu: 200m
            memory: 400Mi

---
# orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: gnx-apps-ns
  name: orders-svc
spec:
  selector:
    app: orders # Select pods with this label
  ports:
  - protocol: TCP
    port: 80 # Port the service exposes
    targetPort: 8080 # Port the container exposes
  type: ClusterIP # Expose the service internally
